# LabubuBot

./: .gitignore  README.md  package.json  pyproject.toml
_data/: config.yml  www.popmart.com.cookies.json  www.popmart.com.storage.json
labububot/: __init__.py  bot.py  cli.py  config.py  http_client.py  locators.py  main.py  selenium_driver.py  utils.py
src/cookie_based/: index.js
src/login_based/: index.js
src/utils/: constant.js
